🥳 init: 第一次初始化仓库

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,7 @@ services:
       - "8000:8000"
     volumes:
       - ./main.py:/app/main.py
+    environment:
+      - SECURE_1PSID=${SECURE_1PSID}
+      - SECURE_1PSIDTS=${SECURE_1PSIDTS}
     restart: unless-stopped
