🐞 fix: 修复部分 Docker 启动问题

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - "8000:8000"
     volumes:
       - ./main.py:/app/main.py
+      - ./requirements.txt:/app/requirements.txt
+    env_file:
+      - .env
     environment:
       - SECURE_1PSID=${SECURE_1PSID}
       - SECURE_1PSIDTS=${SECURE_1PSIDTS}
