✨ feat: 增加请求时间

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,6 @@ dependencies = [
     "gemini-webapi>=1.11.0",
     "uvicorn[standard]>=0.34.1",
 ]
+[[tool.uv.index]]
+url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
+default = true
