--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,7 @@ services:
       - "8000:8000"
     volumes:
       - ./main.py:/app/main.py
-      - ./requirements.txt:/app/requirements.txt
+      - ./pyproject.toml:/app/pyproject.toml
     env_file:
       - .env
-    environment:
-      - SECURE_1PSID=${SECURE_1PSID}
-      - SECURE_1PSIDTS=${SECURE_1PSIDTS}
     restart: unless-stopped
