--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "gemi2api-server"
-version = "0.1.0"
+version = "0.1.1"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -13,3 +13,17 @@ dependencies = [
 [[tool.uv.index]]
 url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
 default = true
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.7",
+]
+
+[tool.ruff]
+line-length = 150  # 设置最大行长度
+select = ["E", "F", "W", "I"]  # 启用的规则（E: pycodestyle, F: pyflakes, W: pycodestyle warnings, I: isort）
+ignore = ["E501"]  # 忽略特定规则（如行长度警告）
+
+[tool.ruff.format]
+quote-style = "double"  # 使用双引号
+indent-style = "tab"  # 使用空格缩进
