✨ feat: 添加 API_KEY 环境变量支持至 render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -12,5 +12,7 @@ services:
         sync: false
       - key: SECURE_1PSIDTS
         sync: false
+      - key: API_KEY
+        sync: false
     healthCheckPath: /
     autoDeploy: true
