--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,3 @@
-# fly.toml app configuration file generated for gemini2api on 2025-05-15T07:23:08Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
 app = 'gemini2api'
 primary_region = 'nrt'
 
@@ -10,14 +5,13 @@ primary_region = 'nrt'
 
 [http_service]
   internal_port = 8000
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+  force_https          = true
+  auto_start_machines  = true
+  auto_stop_machines   = false
+  min_machines_running = 1
+  processes            = ["app"]
 
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 4
-  memory_mb = 8192
+  [http_service.concurrency]
+    type       = "requests"
+    soft_limit = 9999
+    hard_limit = 9999
